OpenCL kernel error (. used instead of ->) #41912

Closed
opened 2014-09-23 11:37:46 +02:00 by Vitaliy Filippov · 9 comments
First-time contributor

Hi! I've tried to run Cycles render using Mesa OpenCL implementation and got an easily fixable kernel compilation error. It's still present in your git master, please fix it :) the patch is attached: kernel_shader.h.diff

System Information
Linux 3.16.2, Radeon 8770M, Mesa 10.4-dev from OIBAF ppa, LLVM 3.5

Blender Version
Broken: 2.71, also in git master (checked on git.blender.org)

Hi! I've tried to run Cycles render using Mesa OpenCL implementation and got an easily fixable kernel compilation error. It's still present in your git master, please fix it :) the patch is attached: [kernel_shader.h.diff](https://archive.blender.org/developer/F111828/kernel_shader.h.diff) **System Information** Linux 3.16.2, Radeon 8770M, Mesa 10.4-dev from OIBAF ppa, LLVM 3.5 **Blender Version** Broken: 2.71, also in git master (checked on git.blender.org)
Author
First-time contributor

Changed status to: 'Open'

Changed status to: 'Open'
Author
First-time contributor

Added subscriber: @vitalif

Added subscriber: @vitalif
Thomas Dinges was assigned by Bastien Montagne 2014-09-23 12:07:46 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Thomas, I know you love OCl… ;)

Thomas, I know you **love** OCl… ;)
First-time contributor

This issue was referenced by 2ed1b67835

This issue was referenced by 2ed1b6783577cb9df32edf056a83798fc5d84914

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2ed1b67835.

Closed by commit 2ed1b67835.

Commited, this fixes it. Note though: Building without SVM gives you only very basic clay like rendering, not really usable.

Commited, this fixes it. Note though: Building without __SVM__ gives you only very basic clay like rendering, not really usable.
Author
First-time contributor

OK :) it crashes LLVM R600 backend by now, so to use SVM I first want to get it work without it...

OK :) it crashes LLVM R600 backend by now, so to use SVM I first want to get it work without it...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41912
No description provided.