Fix T41912, OpenCL compile error when building without __SVM__

Thanks to Vitaliy Filippov for the patch.